# problem-solving-cpp

./: CMakeLists.txt  README.md  beautiful_matrix.cpp  colorful_stones.cpp  games.cpp  gravity_flip.cpp  night_at_the_museum.cpp  seraja_and_dima.cpp  stones_on_the_table.cpp
src/: CMakeLists.txt  anton_and_danik.cpp  anton_and_letters.cpp  bear_and_big_brother.cpp  beautiful_matrix.cpp  black_square.cpp  die_roll.cpp  helpful_maths.cpp  juicer.cpp  magnets.cpp  mahmoud_and_the_longest_uncommon_subsequence.cpp  new_password.cpp  police_recruits.cpp  shaass_and_oskols.cpp  snacktower.cpp  team.cpp  team_olympiad.cpp  vanya_and_fence.cpp  way_too_long_words.cpp
src/codeforces/: CMakeLists.txt
src/codeforces/d2/: CMakeLists.txt
src/codeforces/d2/a/: CMakeLists.txt  alyona_and_numbers.cpp  bear_and_big_brother.cpp  bit++.cpp  buy_a_shovel.cpp  carrot_cake.cpp  chewbacca_and_number.cpp  dice_tower.cpp  die_roll.cpp  even_odds.cpp  free_ice_cream.cpp  good_number.cpp  gravity_flip.cpp  help_vasilia_the_wise_2.cpp  iq_test.cpp  keyboard.cpp  ksenia_and_pan_scales.cpp  launch_of_collider.cpp  line_land_mail.cpp  mountain_scenery.cpp  next_round.cpp  night_at_the_museum.cpp  oath_of_the_nights_watch.cpp  pangram.cpp  police_recruits.cpp  polo_the_penguin_and_segments.cpp  presents.cpp  seraja_and_dima.cpp  snow_footprints.cpp  stones_on_the_table.cpp  twins.cpp  yaroslav_and_permutations.cpp  young_physicist.cpp
src/codeforces/d2/b/: CMakeLists.txt  bear_and_finding_criminals.cpp  burglar_and_matches.cpp  coins.cpp  decoding.cpp  effective_approach.cpp  petya_and_countryside.cpp  sum_of_digits.cpp  vanya_and_lanterns.cpp
