cmake_minimum_required(VERSION 3.27)
project(problem-solving-cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(games games.cpp)
add_executable(buy_a_shovel buy_a_shovel.cpp)
add_executable(colorful_stones colorful_stones.cpp)
add_executable(vanya_and_fence vanya_and_fence.cpp)
add_executable(anton_and_danik anton_and_danik.cpp)
add_executable(bear_and_big_brother bear_and_big_brother.cpp)
add_executable(team team.cpp)
add_executable(beautiful_matrix beautiful_matrix.cpp)
add_executable(gravity_flip gravity_flip.cpp)
add_executable(magnets magnets.cpp)
add_executable(seraja_and_dima seraja_and_dima.cpp)
add_executable(stones_on_the_table stones_on_the_table.cpp)
add_executable(police_recruits police_recruits.cpp)
add_executable(black_square black_square.cpp)
add_executable(night_at_the_museum night_at_the_museum.cpp)
