add_executable(games games.cpp)
add_executable(buy_a_shovel buy_a_shovel.cpp)
add_executable(colorful_stones colorful_stones.cpp)
add_executable(vanya_and_fence vanya_and_fence.cpp)
add_executable(anton_and_danik anton_and_danik.cpp)
add_executable(bear_and_big_brother bear_and_big_brother.cpp)
add_executable(team team.cpp)
add_executable(beautiful_matrix beautiful_matrix.cpp)
add_executable(gravity_flip gravity_flip.cpp)
add_executable(magnets magnets.cpp)
add_executable(seraja_and_dima seraja_and_dima.cpp)
add_executable(stones_on_the_table stones_on_the_table.cpp)
add_executable(police_recruits police_recruits.cpp)
add_executable(black_square black_square.cpp)
add_executable(night_at_the_museum night_at_the_museum.cpp)
add_executable(die_roll die_roll.cpp)
add_executable(shaass_and_oskols shaass_and_oskols.cpp)
add_executable(juicer juicer.cpp)
add_executable(carrot_cake carrot_cake.cpp)
add_executable(anton_and_letters anton_and_letters.cpp)
add_executable(way_too_long_words way_too_long_words.cpp)
add_executable(free_ice_cream free_ice_cream.cpp)
add_executable(helpful_maths helpful_maths.cpp)
add_executable(team_olympiad team_olympiad.cpp)
add_executable(new_password new_password.cpp)
add_executable(presents presents.cpp)
add_executable(line_land_mail line_land_mail.cpp)
add_executable(mahmoud_and_the_longest_uncommon_subsequence mahmoud_and_the_longest_uncommon_subsequence.cpp)
add_executable(snacktower snacktower.cpp)